--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,6 @@ commands:
     description: Add spawn command
   delspawn:
     description: Delete spawn command
+  multispawns:
+    aliases: [ms]
+    description: MultiSpawns command
