Added permission multispawn.admin

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,6 @@ commands:
   multispawns:
     aliases: [ms]
     description: MultiSpawns command
+permissions:
+  multispawn.admin:
+    default: op
