--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MultiSpawns
 description: MultiSpawns
 main: com.connorlinfoot.multispawns.MultiSpawns
-version: 1.0-SNAPSHOT
+version: 1.0
 authors: [Connor Linfoot]
 commands:
   addspawn:
