--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MultiSpawns
-description: MultiSpawns
+description: A plugin that allows you to have multiple spawns on your server.
 main: com.connorlinfoot.multispawns.MultiSpawns
-version: 1.0
+version: 1.1-SNAPSHOT
 authors: [Connor Linfoot]
 commands:
   addspawn:
@@ -11,6 +11,10 @@ commands:
   multispawns:
     aliases: [ms]
     description: MultiSpawns command
+  spawn:
+    description: Spawn command
 permissions:
   multispawn.admin:
     default: op
+  multispawn.spawn:
+    default: true
